Fix bugs caused by taller navbar
- Fix navbar covering search input
- Fix navbar covering toc title
- Fix sidebar and toc height
- Fix navbar covering anchor elements
- Change rules to override Docsy values instead of countering them

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -1,7 +1,3 @@
-#td-sidebar-menu form {
-  margin-top: 15px;
-}
-
 #search-results .search-result {
   margin-bottom: 10px;
 
@@ -46,9 +42,31 @@ body {
 @media (min-width: 768px) {
   .td-sidebar {
     background-color: rgba(255, 255, 255, 0.05);
-    padding-top: 0;
-    margin-top: 4.5rem;
+    padding-top: 6.5rem;
     border-right: 1px solid rgba(222, 226, 230, 0.15);
+  }
+
+  @supports (position: sticky) {
+    .td-sidebar__inner {
+      height: calc(100vh - 7.5rem);
+      top: 6.5rem;
+    }
+
+    .td-sidebar-nav {
+      max-height: calc(100vh - 11rem);
+    }
+  }
+
+  h2[id]:before, h3[id]:before, h4[id]:before, h5[id]:before {
+    margin-top: -7.5rem;
+    height: 7.5rem;
+  }
+}
+
+@supports (position: sticky) {
+  .td-toc {
+    height: calc(100vh - 6.5rem);
+    top: 6.5rem;
   }
 }
 
@@ -114,14 +132,6 @@ i.fa, i.fas, i.fab {
   }
 }
 
-#td-sidebar-menu form {
-  margin-top: 25px;
-}
-
-.pt-2, .py-2 {
-  padding-top: 1rem !important;
-}
-
 .td-sidebar-nav__section ul {
   margin: 5px 0;
 }
@@ -144,10 +154,6 @@ i.fa, i.fas, i.fab {
 
 .navbar {
   padding: 1rem 1rem;
-}
-
-.td-toc {
-  top: 4.5rem;
 }
 
 .td-content > blockquote {
